# wgslirpy

./: Cargo.toml
crates/libwgslirpy/: Cargo.toml
crates/libwgslirpy/src/: channelized_smoltcp_device.rs  gue.rs  lib.rs  router.rs  wg.rs
crates/libwgslirpy/src/router/: serve_dns.rs  serve_pingable.rs  serve_tcp.rs  serve_udp.rs
src/: main.rs
