[package]
categories = ["network-programming", "command-line-utilities"]
description = "User-space Wireguard to internet router, like SLiRP, but with Wireguard instead of PPP"
edition = "2021"
keywords = ["wireguard", "onetun", "slirp", "nat"]
license = "MIT/Apache-2.0"
name = "wgslirpy"
repository = "https://github.com/vi/wgslirpy"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
argh = "0.1.10"
hyper = {version = "0.14.27", features = ["server", "http1", "tcp"]}
lazy_static = "1.4.0"
libwgslirpy = {version = "0.2.0", path = "crates/libwgslirpy"}
prometheus = "0.13.3"
tokio = {version = "1.29.1", features = ["full"]}
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.17", optional = true}

[features]
default = ["tracing-subscriber", "tracing/release_max_level_debug"]

[workspace]
members = ["crates/*"]
