[package]
categories = ["network-programming", "command-line-utilities"]
description = "User-space Wireguard to internet router, like SLiRP, but with Wireguard instead of PPP"
edition = "2021"
keywords = ["wireguard", "onetun", "slirp", "nat"]
license = "MIT/Apache-2.0"
name = "wgslirpy"
repository = "https://github.com/vi/wgslirpy"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
argh = "0.1.10"
lazy_static = "1.4.0"
libwgslirpy = {version = "0.2.0", path = "crates/libwgslirpy"}
tokio = {version = "1.43.0", features = ["full"]}
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = {version = "0.3.19", optional = true}
opentelemetry = {  version = "0.27.1", features = ["otel_unstable"] }
opentelemetry-otlp = { version = "0.27.0", features = ["metrics", "tls"] }
opentelemetry_sdk = { version = "0.27.1", features = ["rt-tokio"] }
tonic = { version = "0.12.3", features = ["tls", "tls-webpki-roots"] }

[features]
default = ["tracing-subscriber", "tracing/release_max_level_debug"]

[workspace]
members = ["crates/*"]
