[package]
categories = ["network-programming"]
description = "User-space Wireguard to internet router, like SLiRP, but with Wireguard instead of PPP (library part of the CLI tool)"
edition = "2021"
keywords = ["wireguard", "onetun", "slirp", "nat"]
license = "MIT/Apache-2.0"
name = "libwgslirpy"
repository = "https://github.com/vi/wgslirpy"
version = "0.2.0"

[dependencies]
anyhow = "1.0.72"
base64 = "0.21.2"
boringtun = "0.6.0"
bytes = "1.4.0"
hashbrown = "0.14.0"
lazy_static = "1.4.0"
prometheus = "0.13.3"
simple-dns = "0.5.3"
smoltcp = {version = "0.10.0", default-features = false, features = [
  "socket",
  "socket-tcp",
  "socket-udp",
  "std",
  "proto-ipv4",
  "proto-ipv4-fragmentation",
  "proto-ipv6",
  "fragmentation-buffer-size-65536",
  "assembler-max-segment-count-32",
  "log",
  "medium-ip",
]}
tokio = {version = "1.29.1", features = ["rt", "net", "sync", "macros", "io-util", "time"]}
tracing = "0.1.37"
