[package]
categories = ["network-programming"]
description = "User-space Wireguard to internet router, like SLiRP, but with Wireguard instead of PPP (library part of the CLI tool)"
edition = "2021"
keywords = ["wireguard", "onetun", "slirp", "nat"]
license = "MIT/Apache-2.0"
name = "libwgslirpy"
repository = "https://github.com/vi/wgslirpy"
version = "0.2.0"

[dependencies]
anyhow = "1.0.95"
base64 = "0.22.1"
boringtun = "0.6.0"
bytes = "1.10.0"
hashbrown = "0.15.2"
lazy_static = "1.5.0"
prometheus = "0.13.3"
simple-dns = "0.5.3"
smoltcp = {version = "0.10.0", default-features = false, features = [
  "socket",
  "socket-tcp",
  "socket-udp",
  "std",
  "proto-ipv4",
  "proto-ipv4-fragmentation",
  "proto-ipv6",
  "fragmentation-buffer-size-65536",
  "assembler-max-segment-count-32",
  "log",
  "medium-ip",
]}
async-trait = "0.1.86"
tokio = {version = "1.43.0", features = ["full", "tracing"]}
tracing = "0.1.41"
opentelemetry = {  version = "0.27.1", features = ["otel_unstable"] }